Fix:fixed wrong positioning of modal on popup

--- a/src/components/Modal/modal.module.css
+++ b/src/components/Modal/modal.module.css
@@ -1,28 +1,51 @@
-
-
 .backdrop {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 580%;
-        height: 580%;
-        background: rgb(0, 0, 0, 0.3);
-        z-index: 1000;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 20;
+    background-color: rgba(0, 0, 0, 0.75);
 }
 
-.menu {
-    position:absolute;
-    top:50%;
-    left:50%;
-    transform:translate(-50%,-50%);
-    width: 50%;
+.modal {
+    position: fixed;
+    top: 15vh;
+    left: 5%;
+    width: 90%;
+    background-color: white;
+    padding: 1rem;
     border-radius: 14px;
-    z-index: 5000;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+    z-index: 30;
     animation: slide-down 300ms ease-out forwards;
 }
-.menu img {
-    cursor: pointer;
+
+@media (min-width: 768px) {
+    .modal {
+        width: 40rem;
+        left: calc(50% - 20rem);
+    }
 }
+
+@keyframes slide-down {
+    from {
+        opacity: 0;
+        transform: translateY(-3rem);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+
+
+
+
+
+
 /* 
 @media (min-width: 768px) {
     .modal {
